solve CORS issue and adjust close-btn misalignment

--- a/travel-rizz.css
+++ b/travel-rizz.css
@@ -343,9 +343,8 @@ display: block;
   color: #aaa;
   font-size: 28px;
   font-weight: bold;
-  left: 3%;
-  top: 1%;
-  position: sticky;
+  /* right: 10%; */
+  position: fixed;
 }
 
 .close-btn:hover,
@@ -604,9 +603,10 @@ b {
 
     .close-btn {
       color: #aaa;
-      float: right;
+      right: 10%;
       font-size: 28px;
       font-weight: bold;
+      position: fixed;
     }
 
     .close-btn:hover,
@@ -621,6 +621,10 @@ b {
       margin-top: 15px;
       text-align: justify;
       /* line-height: 180%; */
+    }
+
+    .generated-content h1 {
+      font-size: 6vw;
     }
 
     .generated-content p {
@@ -902,9 +906,10 @@ b {
 
   .close-btn {
     color: #aaa;
-    float: right;
-    font-size: 28px;
+    right: 10%;
+    font-size: 5vw;
     font-weight: bold;
+    position: fixed;
   }
 
   .close-btn:hover,
